tests/NormalTests/paczka1/small_fuzzy/41488760.err
Error in line 5: mlX S814 25,4
Error in line 6: QcU9l S814 54,4
Error in line 9: bMKs S814 62,3
Error in line 15: Vn0TLp87w A441 27,0
